@@ -1,3 +1,33 @@
+## @knitr ##Chen-BB.prb
+# This is file ##Chen-BB.prb
+probname <- "##Chen-BB"
+probdesc <- "
+This problem appears as one of the tests of the BB package for R on CRAN.
+
+So far I (JN) have not found a source for this problem as at 20171007.
+It appears to be a small-residual or nonlinear equations problem with
+variable number of parameters.
+
+
+The problem has only a functional form. I added the gradient.
+It appears that there may be multiple solutions or near-solutions.
+
+"
+
+#- Note: environment / list "counters" must already exist
+
+if (exists("pe")) { 
+  rm("pe")  
+}
+
+pe <- new.env()
+pe$kf <- 0
+pe$kg <- 0
+pe$kjac <- 0
+pe$kres <- 0
+
+#- nls format expression
+##Chen-BB.formula <- ( y ~ b1*x**b2 )
 ## Chen function ?? ref?
 
 chen.f <- function(x) {
@@ -21,6 +51,7 @@ chen.res <- function(x) {
 
 chen.jac <- function(x) {
    n<-length(x)
+   v <- log(x) + exp(x)
    jj<-matrix(0.0, n, n)
    for (i in 1:n) {
      jj[i,i] <- 0.5 * (1.0/x[i] + exp(x[i])) * (1.0-v[i]/sqrt(v[i]^2 + 5e-04))
@@ -29,21 +60,28 @@ chen.jac <- function(x) {
 }
 
 
-chen.setup <- function(n=NULL, probcase=NULL) {
-   if ( is.null(n) ) {
-      n <- readline("Order of problem (n):")
-   }
-   if (is.null(probcase)) { probcase <- 1 }
-   if (probcase == 1) { x<-rep(2,n) }
-#  else if (probcase == 2) {       }
-   lower<-rep(0.0, n) # Because log cannot take negative argument?
-   upper<-rep(100.0, n)
-   bdmsk<-rep(1,n)
-   gsu<-list(x=x,lower=lower,upper=upper,bdmsk=bdmsk)
-   return(gsu)
+
+
+chen.setup <- function(n = 2) { 
+  require(setRNG)
+  test.rng <- list(kind="Wichmann-Hill", normal.kind="Box-Muller", seed=c(979,1479,1542))
+  old.seed <- setRNG(test.rng)
+  st <- rexp(n)   
+  lower<-rep(0.0, n) # Because log cannot take negative argument?
+  upper<-rep(100.0, n)
+  bdmsk<-rep(1,n)
+  gsu<-list(st=st,lower=lower,upper=upper,bdmsk=bdmsk)
+  gsu
 }
 
+## Examples
 
+n <- 2
+cset <- chen.setup(n)
+cat("start =")
+print(cset$st)
+cBB2opm <- opm(cset$st, chen.f, chen.g, method="ALL",  lower=cset$lower, upper=cset$upper, control=list(trace=1))
+summary(cBB2opm, order=value)
 
 
 
